@@ -165,6 +165,15 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::search_tid] = "Search by Title ID",
 			[str::invalid_tid] = "Invalid Title ID",
 			[str::theme_installer_tid_bad] = "Please browse the Themes category manually to look for themes",
+			[str::enter_lgy_query] = "Enter a legacy search query",
+			[str::no_other_params_tid] = "Cannot specify any other parameters when specifying a Title ID",
+			[str::both_sd_and_sb] = "You must specify a sort method and a sort direction when sorting search results",
+			[str::invalid_sb] = "Invalid sort method",
+			[str::invalid_sd] = "Invalid sort direction",
+			[str::invalid_includes] = "Invalid include filters",
+			[str::invalid_excludes] = "Invalid exclude filters",
+			[str::filter_overlap] = "Detected an overlap in the specified search filters",
+			[str::lgy_search] = "Legacy Search",
 		},
 
 	[lang::dutch] =
@@ -302,6 +311,15 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			STUB(search_tid),
 			STUB(invalid_tid),
 			STUB(theme_installer_tid_bad),
+			STUB(enter_lgy_query),
+			STUB(no_other_params_tid),
+			STUB(both_sd_and_sb),
+			STUB(invalid_sb),
+			STUB(invalid_sd),
+			STUB(invalid_includes),
+			STUB(invalid_excludes),
+			STUB(filter_overlap),
+			STUB(lgy_search),
 		},
 
 	[lang::german] =
@@ -437,6 +455,15 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			STUB(search_tid),
 			STUB(invalid_tid),
 			STUB(theme_installer_tid_bad),
+			STUB(enter_lgy_query),
+			STUB(no_other_params_tid),
+			STUB(both_sd_and_sb),
+			STUB(invalid_sb),
+			STUB(invalid_sd),
+			STUB(invalid_includes),
+			STUB(invalid_excludes),
+			STUB(filter_overlap),
+			STUB(lgy_search),
 		},
 
 	[lang::spanish] =
@@ -573,6 +600,15 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			STUB(search_tid),
 			STUB(invalid_tid),
 			STUB(theme_installer_tid_bad),
+			STUB(enter_lgy_query),
+			STUB(no_other_params_tid),
+			STUB(both_sd_and_sb),
+			STUB(invalid_sb),
+			STUB(invalid_sd),
+			STUB(invalid_includes),
+			STUB(invalid_excludes),
+			STUB(filter_overlap),
+			STUB(lgy_search),
 		},
 
 	[lang::french] =
@@ -709,6 +745,15 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			STUB(search_tid),
 			STUB(invalid_tid),
 			STUB(theme_installer_tid_bad),
+			STUB(enter_lgy_query),
+			STUB(no_other_params_tid),
+			STUB(both_sd_and_sb),
+			STUB(invalid_sb),
+			STUB(invalid_sd),
+			STUB(invalid_includes),
+			STUB(invalid_excludes),
+			STUB(filter_overlap),
+			STUB(lgy_search),
 		},
 
 	[lang::french_canada] =
@@ -845,6 +890,15 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			STUB(search_tid),
 			STUB(invalid_tid),
 			STUB(theme_installer_tid_bad),
+			STUB(enter_lgy_query),
+			STUB(no_other_params_tid),
+			STUB(both_sd_and_sb),
+			STUB(invalid_sb),
+			STUB(invalid_sd),
+			STUB(invalid_includes),
+			STUB(invalid_excludes),
+			STUB(filter_overlap),
+			STUB(lgy_search),
 		},
 
 		[lang::romanian] =
@@ -981,6 +1035,15 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			STUB(search_tid),
 			STUB(invalid_tid),
 			STUB(theme_installer_tid_bad),
+			STUB(enter_lgy_query),
+			STUB(no_other_params_tid),
+			STUB(both_sd_and_sb),
+			STUB(invalid_sb),
+			STUB(invalid_sd),
+			STUB(invalid_includes),
+			STUB(invalid_excludes),
+			STUB(filter_overlap),
+			STUB(lgy_search),
 		},
 
 	[lang::italian] =
@@ -1117,6 +1180,15 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			STUB(search_tid),
 			STUB(invalid_tid),
 			STUB(theme_installer_tid_bad),
+			STUB(enter_lgy_query),
+			STUB(no_other_params_tid),
+			STUB(both_sd_and_sb),
+			STUB(invalid_sb),
+			STUB(invalid_sd),
+			STUB(invalid_includes),
+			STUB(invalid_excludes),
+			STUB(filter_overlap),
+			STUB(lgy_search),
 		},
 
 	[lang::portuguese] =
@@ -1253,6 +1325,15 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			STUB(search_tid),
 			STUB(invalid_tid),
 			STUB(theme_installer_tid_bad),
+			STUB(enter_lgy_query),
+			STUB(no_other_params_tid),
+			STUB(both_sd_and_sb),
+			STUB(invalid_sb),
+			STUB(invalid_sd),
+			STUB(invalid_includes),
+			STUB(invalid_excludes),
+			STUB(filter_overlap),
+			STUB(lgy_search),
 		},
 
 	[lang::korean] =
@@ -1390,6 +1471,15 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			STUB(search_tid),
 			STUB(invalid_tid),
 			STUB(theme_installer_tid_bad),
+			STUB(enter_lgy_query),
+			STUB(no_other_params_tid),
+			STUB(both_sd_and_sb),
+			STUB(invalid_sb),
+			STUB(invalid_sd),
+			STUB(invalid_includes),
+			STUB(invalid_excludes),
+			STUB(filter_overlap),
+			STUB(lgy_search),
 		}
 };
 #pragma GCC diagnostic pop
